# Vault

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: crypto.h  entry.h  vault.h
src/: crypto.c  entry.c  main.c  vault.c
